# ssb_mcp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ssb_mcp/: main.py
